--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy-surge": "npm run build && cd dist && cp index.html 200.html && surge . horse-race-simulator.surge.sh",
     "test:unit": "vitest",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
